# cairo-dock-core

./: .bzrignore  .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  README_Wayland.md  SECURITY.md  TODO  aclocal.m4  apply-default-values-to-conf.sh  cairo-dock-package-theme  cairo-dock-package-theme.sh  cairo-dock-update.sh  cairo-dock.pc  cairo-dock.pc.in  cairo-dock_theme-creator.sh  cmake_uninstall.cmake.in  compile  compile-all.sh  config.h  config.h.cmake  config.h.cmake.in  config.h.in  config.status  configure  configure.ac  copyright  generate-deb.sh  install  intltool-extract  intltool-merge  intltool-update  launch-cairo-dock-after-beryl.sh  libtool
Help/src/: CMakeLists.txt  applet-composite.c  applet-config.c  applet-config.h  applet-init.c  applet-notifications.c  applet-notifications.h  applet-struct.h  applet-tips-dialog.c
data/: CMakeLists.txt  ChangeLog-history.txt  ChangeLog.txt  Help.conf.in  Makefile  Makefile.am  Makefile.in  apply-default-values-to-conf.sh  cairo-dock  cairo-dock-cairo.desktop  cairo-dock-cairo.desktop.in  cairo-dock-indirect.desktop  cairo-dock-plugins.conf  cairo-dock-plugins.conf.in  cairo-dock-simple.conf.in  cairo-dock.conf  cairo-dock.conf.in  cairo-dock.desktop  cairo-dock.desktop.in  cairo-dock2.conf  cairo-dock_easy.conf  container.conf  container.desktop  container.desktop.THIS  container.desktop.in  file.conf  file.desktop  help.conf  help.conf.in  help_scripts.sh  initial-setup.sh  launcher.conf  launcher.desktop  launcher.desktop.THIS  launcher.desktop.in  main-dock.conf  main-dock.conf.in  messages  readme-default-view  separator.conf  (+5 more)
data/default-theme/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cairo-dock.conf  preview  readme
data/desktop-manager/: CMakeLists.txt  cairo-dock-fallback.desktop  cairo-dock-session  cairo-dock.desktop  cairo-dock.session
data/emblems/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
data/explosion/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
data/gauges/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in
data/icons/: CMakeLists.txt  cairo-dock-animated.xpm
data/images/: CMakeLists.txt
data/man/: CMakeLists.txt  cairo-dock_en.1
data/scripts/: CMakeLists.txt  cairo-dock-package-theme.sh  help_scripts.sh  initial-setup.sh
data/systemd/: CMakeLists.txt  cairo-dock.service  cairo-dock.service.in
data/themes/: CMakeLists.txt
po/: CMakeLists.txt  LINGUAS  Makefile  Makefile.in  Makefile.in.in  Makevars  POTFILES  POTFILES.in  ar.po  be.po  bg.po  bn.po  ca.po  cairo-dock.pot  cs.po  cy.po  da.po  de.po  el.gmo  el.po  en.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fo.po  fr.gmo  fr.po  fr.po.mine  fr.po.r1179  fr.po.r1199  generate-translation.sh  gl.po  he.po  hi.po  hu.po  id.po  ie.po  (+34 more)
po/misc/: add-descriptions.sh  add-readme.sh  cairo-dock-extract-message.c  generate-translation.sh  transfert_translations.sh  update-desktop-files.sh  update-translations.sh
src/: .cairo-dock-emblem.c.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Makefile2.am  burn.c  cairo-dock  cairo-dock-X-manager.c  cairo-dock-X-utilities.c  cairo-dock-X-utilities.h  cairo-dock-X-utilities2.c  cairo-dock-X-utilities2.h  cairo-dock-accessibility.c  cairo-dock-accessibility.h  cairo-dock-animations.c  cairo-dock-animations.h  cairo-dock-animations2.c  cairo-dock-animations2.h  cairo-dock-applet-canvas.h  cairo-dock-applet-container.c  cairo-dock-applet-container.h  cairo-dock-applet-facility.c  cairo-dock-applet-facility.h  cairo-dock-applet-facility2.c  cairo-dock-applet-facility2.h  cairo-dock-applet-factory.c  cairo-dock-applet-factory.h  cairo-dock-applet-manager.c  cairo-dock-applet-manager.h  cairo-dock-applet-multi-instance.h  cairo-dock-applet-multi-instance2.h  cairo-dock-applet-single-instance.h  cairo-dock-applet-single-instance2.h  cairo-dock-application-facility.c  cairo-dock-application-facility.h  cairo-dock-application-factory.c  cairo-dock-application-factory.h  cairo-dock-application-factory2.c  cairo-dock-applications-manager.c  (+210 more)
src/.deps/: cairo_dock-cairo-dock-X-utilities.Po  cairo_dock-cairo-dock-animations.Po  cairo_dock-cairo-dock-applet-facility.Po  cairo_dock-cairo-dock-applet-factory.Po  cairo_dock-cairo-dock-application-factory.Po  cairo_dock-cairo-dock-applications-manager.Po  cairo_dock-cairo-dock-callbacks.Po  cairo_dock-cairo-dock-class-manager.Po  cairo_dock-cairo-dock-config.Po  cairo_dock-cairo-dock-dbus.Po  cairo_dock-cairo-dock-default-view.Po  cairo_dock-cairo-dock-desklet.Po  cairo_dock-cairo-dock-desktop-file-factory.Po  cairo_dock-cairo-dock-dialogs.Po  cairo_dock-cairo-dock-dock-factory.Po  cairo_dock-cairo-dock-dock-manager.Po  cairo_dock-cairo-dock-draw-opengl.Po  cairo_dock-cairo-dock-draw.Po  cairo_dock-cairo-dock-emblem.Po  cairo_dock-cairo-dock-file-manager.Po  cairo_dock-cairo-dock-flying-container.Po  cairo_dock-cairo-dock-gauge.Po  cairo_dock-cairo-dock-graph.Po  cairo_dock-cairo-dock-gui-callbacks.Po  cairo_dock-cairo-dock-gui-factory.Po  cairo_dock-cairo-dock-gui-factory2.Po  cairo_dock-cairo-dock-gui-manager.Po  cairo_dock-cairo-dock-icons.Po  cairo_dock-cairo-dock-keybinder.Po  cairo_dock-cairo-dock-keyfile-utilities.Po  cairo_dock-cairo-dock-launcher-factory.Po  cairo_dock-cairo-dock-load.Po  cairo_dock-cairo-dock-log.Po  cairo_dock-cairo-dock-menu.Po  cairo_dock-cairo-dock-modules.Po  cairo_dock-cairo-dock-notifications.Po  cairo_dock-cairo-dock-particle-system.Po  cairo_dock-cairo-dock-renderer-manager.Po  cairo_dock-cairo-dock-separator-factory.Po  cairo_dock-cairo-dock-surface-factory.Po  (+5 more)
src/gldit/: CMakeLists.txt  cairo-dock-X-manager.c  cairo-dock-X-manager.h  cairo-dock-X-utilities.c  cairo-dock-X-utilities.h  cairo-dock-animations.c  cairo-dock-animations.h  cairo-dock-applet-canvas.h  cairo-dock-applet-facility.c  cairo-dock-applet-facility.h  cairo-dock-applet-manager.c  cairo-dock-applet-manager.h  cairo-dock-applet-multi-instance.h  cairo-dock-applet-single-instance.h  cairo-dock-application-facility.c  cairo-dock-application-facility.h  (+171 more)
(+691 files in other folders)
