#dnl Process this file with automake to produce Makefile.in


SUBDIRS = . src po data


pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = cairo-dock.pc


dist_bin_SCRIPTS = \
	cairo-dock-package-theme\
	launch-cairo-dock-after-compiz


EXTRA_DIST = \
	intltool-extract.in\
	intltool-merge.in\
	intltool-update.in\
	LICENSE\
	LGPL-2\
	ChangeLog\
	copyright
